fix: skill name overflow

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,8 +7,8 @@ $font-family-base: -apple-system, BlinkMacSystemFont, 'SF Pro Text', 'Segoe UI',
   'Source Han Sans SC', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
 
 body {
-  --color-bg: rgba(163, 163, 162, 0.6);
-  --color-cover: rgba(0, 0, 0, 0.4);
+  --color-bg: rgba(145, 145, 145, 0.6);
+  --color-cover: rgba(170, 170, 169, 0.6);
   --color-active: rgba(123, 170, 23, 0.6);
   --color-text: #fff;
   --color-dps: rgba(232, 107, 121, 0.6);
